{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 114,
  "lineage": "89135c5b-e7c7-8194-f7ee-591bfe971134",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "card-webapp-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:internet-gateway/igw-085db5aa57c039b48",
            "id": "igw-085db5aa57c039b48",
            "owner_id": "957007732222",
            "tags": {
              "Name": "Card-Webapp-IG"
            },
            "tags_all": {
              "Name": "Card-Webapp-IG"
            },
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "dependencies": [
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "card-webapp-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:loadbalancer/app/card-webapp-LB/be888c78ce1a1651",
            "arn_suffix": "app/card-webapp-LB/be888c78ce1a1651",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-webapp-LB-1862744437.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:loadbalancer/app/card-webapp-LB/be888c78ce1a1651",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-webapp-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ae7b2c8e0412e5bc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0889518dbc26e55d3"
              },
              {
                "subnet_id": "subnet-0b0272bf7ebf60e9f"
              }
            ],
            "subnets": [
              "subnet-0889518dbc26e55d3",
              "subnet-0b0272bf7ebf60e9f"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0c406980631eecdca",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow-SSH",
            "aws_subnet.card-webapp-subnet-1a",
            "aws_subnet.card-webapp-subnet-2a",
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "card-webapp-LB-Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:listener/app/card-webapp-LB/be888c78ce1a1651/f815f41d5e4b405a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:targetgroup/card-webapp-LB-TG/4a0bb5be5b221129",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:listener/app/card-webapp-LB/be888c78ce1a1651/f815f41d5e4b405a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:loadbalancer/app/card-webapp-LB/be888c78ce1a1651",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.card-webapp-LB",
            "aws_lb_target_group.card-webapp-LB-TG",
            "aws_security_group.allow-SSH",
            "aws_subnet.card-webapp-subnet-1a",
            "aws_subnet.card-webapp-subnet-2a",
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "card-webapp-LB-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:targetgroup/card-webapp-LB-TG/4a0bb5be5b221129",
            "arn_suffix": "targetgroup/card-webapp-LB-TG/4a0bb5be5b221129",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:957007732222:targetgroup/card-webapp-LB-TG/4a0bb5be5b221129",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-webapp-LB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "dependencies": [
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "card-webapp-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:route-table/rtb-0a54f633a4cfef343",
            "id": "rtb-0a54f633a4cfef343",
            "owner_id": "957007732222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085db5aa57c039b48",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Card-Webapp-RT"
            },
            "tags_all": {
              "Name": "Card-Webapp-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.card-webapp-IG",
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card-webapp-RT-asso-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f675736f2da7a3e",
            "route_table_id": "rtb-0a54f633a4cfef343",
            "subnet_id": "subnet-0889518dbc26e55d3"
          },
          "dependencies": [
            "aws_internet_gateway.card-webapp-IG",
            "aws_route_table.card-webapp-RT",
            "aws_subnet.card-webapp-subnet-1a",
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card-webapp-RT-asso-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ef993bb40b413ee",
            "route_table_id": "rtb-0a54f633a4cfef343",
            "subnet_id": "subnet-0b0272bf7ebf60e9f"
          },
          "dependencies": [
            "aws_internet_gateway.card-webapp-IG",
            "aws_route_table.card-webapp-RT",
            "aws_subnet.card-webapp-subnet-2a",
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:security-group/sg-0ae7b2c8e0412e5bc",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae7b2c8e0412e5bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-SSH",
            "name_prefix": "",
            "owner_id": "957007732222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow-SSH"
            },
            "tags_all": {
              "Name": "Allow-SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-webapp-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:subnet/subnet-0889518dbc26e55d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0889518dbc26e55d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957007732222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Card-Webapp-Subnet-1A"
            },
            "tags_all": {
              "Name": "Card-Webapp-Subnet-1A"
            },
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "dependencies": [
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-webapp-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:subnet/subnet-0680447e582c31956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0680447e582c31956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957007732222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Card-Webapp-Subnet-1B"
            },
            "tags_all": {
              "Name": "Card-Webapp-Subnet-1B"
            },
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "dependencies": [
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-webapp-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:subnet/subnet-0b0272bf7ebf60e9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0272bf7ebf60e9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957007732222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Card-Webapp-Subnet-2A"
            },
            "tags_all": {
              "Name": "Card-Webapp-Subnet-2A"
            },
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "dependencies": [
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-webapp-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:subnet/subnet-03699bd03205ad38c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03699bd03205ad38c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957007732222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Card-Webapp-Subnet-2B"
            },
            "tags_all": {
              "Name": "Card-Webapp-Subnet-2B"
            },
            "vpc_id": "vpc-0c406980631eecdca"
          },
          "dependencies": [
            "aws_vpc.card-webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "card-webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:957007732222:vpc/vpc-0c406980631eecdca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe5921893c4d63be",
            "default_route_table_id": "rtb-07bc5686fd0db9a68",
            "default_security_group_id": "sg-0080c9a58b4b8a9fc",
            "dhcp_options_id": "dopt-0a6817f0344703b38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c406980631eecdca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07bc5686fd0db9a68",
            "owner_id": "957007732222",
            "tags": {
              "Name": "Card-Webapp"
            },
            "tags_all": {
              "Name": "Card-Webapp"
            }
          }
        }
      ]
    }
  ]
}